version/0.10/_sources/examples/05-Legacy/07-result_keywords.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/05-Legacy/07-result_keywords.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_05-Legacy_07-result_keywords.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_05-Legacy_07-result_keywords.py:


.. _ref_result_keywords:

Use keywords to get a more precise result
=========================================
This example shows how to use the legacy PyDPF-Post API to use keywords to get
a more precise result when calling a ``Result`` object from a ``Solution`` object.

.. GENERATED FROM PYTHON SOURCE LINES 33-37

Perform required imports
------------------------
Perform required imports. This example uses a supplied file that you can
get by importing the DPF ``examples`` package.

.. GENERATED FROM PYTHON SOURCE LINES 37-41

.. code-block:: Python


    from ansys.dpf import post
    from ansys.dpf.post import examples








.. GENERATED FROM PYTHON SOURCE LINES 42-46

Get ``Solution`` object
-----------------------
Get the ``Solution`` object. This example loads a simple file supplied with
PyDPF-Post.

.. GENERATED FROM PYTHON SOURCE LINES 46-49

.. code-block:: Python


    solution = post.load_solution(examples.multishells_rst)








.. GENERATED FROM PYTHON SOURCE LINES 50-52

Get keyword list
----------------

.. GENERATED FROM PYTHON SOURCE LINES 52-56

.. code-block:: Python


    post.print_available_keywords()






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    element_scoping: list, int or dpf.core.Scoping
    grouping: str. Use post.grouping.(...) as helper.
    location: str. Use post.locations.(...) as helper.
    mapdl_grouping: int. Write 186 to get mapdl_elements solid_186.
    named_selection: str. Name of named_selection.
    node_scoping: list, int or dpf.core.Scoping
    path: DpfPath object that
                contains a list of coordinates,
                e.g. [[0.1, 0.0, 0.0],
                [0.0, 0.1, 0.0]].
    set: int
    time: float
    time_scoping: list, int or dpf.core.Scoping





.. GENERATED FROM PYTHON SOURCE LINES 57-59

Get ``Result`` objects
----------------------

.. GENERATED FROM PYTHON SOURCE LINES 61-64

Get displacement result using scoping
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
The default location is nodal.

.. GENERATED FROM PYTHON SOURCE LINES 64-70

.. code-block:: Python


    displacement_result = solution.displacement(
        location=post.locations.nodal, node_scoping=[1, 2, 3]
    )
    displacement = displacement_result.vector








.. GENERATED FROM PYTHON SOURCE LINES 71-73

Get information on displacement result
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 73-83

.. code-block:: Python


    displacement.get_data_at_field(0)

    stress_with_elem_scop_result = solution.stress(
        location=post.locations.elemental_nodal, element_scoping=[1]
    )
    stress_with_elem_scop = stress_with_elem_scop_result.tensor

    stress_with_elem_scop.get_data_at_field(0)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DPFArray([[-1.89351567e+10, -1.76835359e+10, -1.23315384e+10,
                1.27527844e+10,  5.75103130e+09,  4.30928026e+09],
              [ 2.26888166e+09, -1.98936699e+10, -4.28985472e+09,
                3.73483930e+10,  1.28815250e+07,  2.29405491e+09],
              [ 4.62267494e+09,  4.15775621e+10,  1.28377395e+10,
                1.36264980e+10,  5.61091738e+09,  4.14261606e+09],
              [ 3.07029586e+10,  6.01620111e+10,  9.52341402e+09,
                2.26091377e+10, -1.73616087e+10, -4.64480973e+09],
              [ 3.09432279e+10, -2.77392410e+09, -6.13098650e+09,
                9.00784538e+09,  3.47990848e+08, -2.41304392e+10],
              [ 2.80970793e+10,  5.10227200e+09,  4.87711840e+08,
                1.04294881e+10,  1.77319514e+09, -3.26250573e+09],
              [-3.35771187e+09, -7.58900634e+09, -5.19623475e+09,
               -9.62379008e+08,  7.06462080e+07, -8.84417984e+08],
              [-1.66533110e+10, -5.39330662e+09, -1.18382500e+10,
               -3.91451443e+09,  7.81984448e+08,  1.12681376e+08]])



.. GENERATED FROM PYTHON SOURCE LINES 84-86

Use named selection on displacement result
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 86-95

.. code-block:: Python


    stress_on_ns_result = solution.stress(
        location=post.locations.elemental_nodal, named_selection="SELECTION"
    )
    stress_on_ns = stress_on_ns_result.tensor
    stress_on_ns.num_fields

    len(stress_on_ns[0])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    5040



.. GENERATED FROM PYTHON SOURCE LINES 96-98

Get a subresult
~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 98-106

.. code-block:: Python


    disp_x = displacement_result.x

    stress_yz = stress_with_elem_scop_result.yz

    stress_principal_1 = stress_on_ns_result.principal_3
    stress_principal_1





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <ansys.dpf.post.result_data.ResultData object at 0x7f5b843c3430>



.. GENERATED FROM PYTHON SOURCE LINES 107-110

Filter result
~~~~~~~~~~~~~
Filter the result on a time, time scoping, and set.

.. GENERATED FROM PYTHON SOURCE LINES 110-123

.. code-block:: Python


    print(solution.time_freq_support)

    stress_on_time_1s_result = solution.stress(time=1.0)
    stress_on_time_1s = stress_on_time_1s_result.tensor

    displacement_on_set_1_result = solution.displacement(set=1)
    displacement_on_set_1 = displacement_on_set_1_result.vector

    elastic_strain_with_time_scoping_result = solution.elastic_strain(time_scoping=[1, 3])
    elastic_strain_with_time_scoping = elastic_strain_with_time_scoping_result.tensor
    elastic_strain_with_time_scoping





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF  Time/Freq Support: 
      Number of sets: 1 
    Cumulative     Time (s)       LoadStep       Substep         
    1              1.000000       1              1               


    <ansys.dpf.post.result_data.ResultData object at 0x7f5ba4d41ff0>



.. GENERATED FROM PYTHON SOURCE LINES 124-126

Make grouping
~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 126-130

.. code-block:: Python


    displacement_result = solution.displacement(grouping=post.grouping.by_el_shape)
    displacement_by_el_shape = displacement_result.vector








.. GENERATED FROM PYTHON SOURCE LINES 131-134

Filter for MAPDL elements
~~~~~~~~~~~~~~~~~~~~~~~~~
Filter for only MAPDL elements of type solid 186.

.. GENERATED FROM PYTHON SOURCE LINES 134-139

.. code-block:: Python


    stress_result = solution.stress(mapdl_grouping=186)
    stress_on_solid_186 = stress_result.tensor
    stress_on_solid_186





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <ansys.dpf.post.result_data.ResultData object at 0x7f5b843c2710>



.. GENERATED FROM PYTHON SOURCE LINES 140-142

Manipulate result and change its definition
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 142-152

.. code-block:: Python


    print(stress_on_ns_result)
    print(stress_on_ns_result.definition.location)

    stress_on_ns_result.definition.location = post.locations.elemental
    stress_on_ns_result.definition.time = 1.0
    stress_on_ns_elemental = stress_on_ns_result.tensor

    print(stress_on_ns_result)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Stress Tensor object.

    Object properties:
     - location   : ElementalNodal
     - named_selection : SELECTION

    ElementalNodal
    Stress Tensor object.

    Object properties:
     - location   : Elemental
     - named_selection : SELECTION
     - time       : 1.0





.. GENERATED FROM PYTHON SOURCE LINES 153-157

Use miscellaneous results
~~~~~~~~~~~~~~~~~~~~~~~~~
You can use the same keywords for miscellaneouse results. For a complex
result, you can also use the keyword ``phase``, which has a float value.

.. GENERATED FROM PYTHON SOURCE LINES 157-160

.. code-block:: Python


    stress_ratio = solution.misc.elemental_stress_ratio(node_scoping=[1, 32], time=1.0)
    print(stress_ratio)




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Stress result.

    This result has been computed using dpf.core.Operator objects, which
    have been chained together according to the following list:
    - ENL_SRAT: Result operator. Compute the desired result.
    - to_elemental_fc: This operator computes the elemental averaging of a fields container.






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.145 seconds)


.. _sphx_glr_download_examples_05-Legacy_07-result_keywords.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 07-result_keywords.ipynb <07-result_keywords.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 07-result_keywords.py <07-result_keywords.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 07-result_keywords.zip <07-result_keywords.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
